feat: google calendar list refactor
